<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.sriyanksiddhartha.stylesandthemesdemo.MainActivity">

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="moveToSecondActivity"
        android:text="@string/MoveToSecondActivity"
        android:background="@color/colorAccent"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AppSmallText"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AppMediumText"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AppLargeText" />

    <TextView
        style="@style/AppExtraLargeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AppExtraLargeText" />

    <TextView
        style="@style/AppExtraLargeTextLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AppExtraLargeTextLight" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/AppRadioButton"
        android:textColor="@color/orange"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txvGradient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AppGradient"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:text="@string/AppShadow"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:textStyle="bold" />

</LinearLayout>
