<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_background_selector"
        android:text="@string/AppButtonOne"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/AppButtonTwo"
        android:textColor="@color/button_color_selector" />

    <TextView
        style="@style/AppLargeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/AppHelloWorld"
        android:textColor="@color/gray" />

    <CheckBox
        style="@style/AppMediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/AppCheckBox"
        android:textColor="@color/orange" />

</LinearLayout>